[fix] Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,9 +29,9 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
   body {
     color: black;
@@ -39,7 +39,7 @@ a {
   }
 }
 
-// 다크모드 텍스트 안보이는 문제 해결
+/* 다크모드 텍스트 안보이는 문제 해결 */
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
